2003-07-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntime.cs: also clear the headers that may have been set upon
	error processing the request.

2003-07-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponseStreamProxy.cs: reformatted. Fixed infinite recursion in
	Write method.

	* HttpWriter.cs: flush the filter after writing.

2003-07-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWriter.cs: avoid duplicating the MemoryStream byte buffer.

2003-07-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpContext.cs: Session doesn't have a setter.

	* HttpResponse.cs: Request is private.

2003-07-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: fixed Headers property. It was getting known headers
	values instead of known headers names.

2003-07-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: prevent nullref if an error happens before context
	is set.
	* HttpException.cs: small fix in the stack trace sent.
	* HttpUtility.cs: the lock is not needed.

2003-06-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: added REMOTE_PORT.
	* HttpValueCollection.cs: fixed bug #45490.

2003-05-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs:
	* HttpApplicationFactory.cs: fire application start and session
	start/end events.

2003-05-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpException.cs: encode as HTML the inner exception that
	is appended as a comment at the end of error pages.

2003-05-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWriter.cs: don't do anything in Flush. Fixes #42249.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlizedException.cs: added more virtual methods.

	* HttpException.cs:  some work on the output when there's a source
	file present.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlizedException.cs: simplified to cope with the new interface.
