@@ -1,43 +1,36 @@
-/**
- * Namespace: System.Web
- * Class:     WebSysDescriptionAttribute
- *
- * Author:  Gaurav Vaish
- * Maintainer: gvaish@iitk.ac.in
- * Contact: <my_scripts2001@yahoo.com>, <gvaish@iitk.ac.in>
- * Implementation: yes
- * Status:  95%
- *
- * (C) Gaurav Vaish (2002)
- */
+//
+// System.Web.WebSysDescriptionAttribute.cs
+//
+// Authors:
+//   Gaurav Vaish (gvaish@iitk.ac.in)
+//   Andreas Nahr (ClassDevelopment@A-SoftTech.com)
+//
+// (C) Gaurav Vaish (2002)
+// (C) 2003 Andreas Nahr
+//
 
 using System;
 using System.ComponentModel;
-using System.Web;
-using System.Web.UI;
 
 namespace System.Web
 {
 	[AttributeUsage(AttributeTargets.All)]
 	internal class WebSysDescriptionAttribute : DescriptionAttribute
 	{
-		private bool isReplaced;
+		private bool isReplaced = false;
 
-		public WebSysDescriptionAttribute(string description) : base(description)
+		public WebSysDescriptionAttribute (string description)
+			: base (description)
 		{
 		}
 
-		[MonoTODO]
-		public override string Description
-		{
-			get
-			{
-				if(!isReplaced)
-				{
-					throw new NotImplementedException();
-					//DescriptionValue = Description + do something I donno;
+		public override string Description {
+			get {
+				if (!isReplaced) {
+					isReplaced = true;
+					DescriptionValue = Locale.GetText (DescriptionValue);
 				}
-				return Description;
+				return DescriptionValue;
 			}
 		}
 	}
